--- a/app/mailscribe/package.json
+++ b/app/mailscribe/package.json
@@ -11,17 +11,20 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/pwa": "^2.6.0",
     "cross-env": "^5.2.0",
     "nuxt": "^2.4.0",
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/pwa": "^2.6.0"
+    "vee-validate": "^3.3.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9",
+    "autoprefixer": "^8.6.4",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-prettier": "^3.0.1",
+    "node-sass": "^4.13.1",
+    "nodemon": "^1.18.9",
     "prettier": "^1.16.4",
-    "autoprefixer": "^8.6.4",
+    "sass-loader": "^8.0.2",
     "tailwindcss": "^0.7.0"
   }
 }
